--- a/p2/style.css
+++ b/p2/style.css
@@ -12,14 +12,14 @@ div#board{
     border: 3px solid #73AD21;
 }
 
-div#0{
+/*div#0{
     position: absolute;
     top: 100px;
     left: 5px;
     width: 20px;
     height: 20px;
     border: 1px solid red;
-}
+}*/
 
 .winner{
     color: navy;
