--- a/zipfoods/public/css/zipfoods.css
+++ b/zipfoods/public/css/zipfoods.css
@@ -78,6 +78,35 @@ Product Show
     margin: auto;
 }
 
+#product-review input[type=number] {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
 #product-review textarea {
     height: 150px;
 }
+
+
+/*----------------------------------------------------
+Product Add
+-----------------------------------------------------*/
+
+#product-add {
+    margin: 20px 0;
+    background-color: #f6f7f7;
+    padding: 10px;
+}
+
+#product-add input[type=text] {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
+#product-add textarea {
+    height: 150px;
+}
+
+#
