--- a/p4/public/css/style.css
+++ b/p4/public/css/style.css
@@ -1,20 +1,43 @@
-#logo {
-    width:300px;
+html{
+    transform: scale(0.80);
 }
 
-fieldset{
-    width: 300px;
-    height: 90px;
+body{
+    background-color:black;
+}
+
+#logo {
+    width:90%;    
+}
+
+h2, h3{
+    color: blue;
 }
 
 input[type=number]{
-    width: 100px;
-    height: 18px;
+    width: 150px;
+    height: 58px;
     font-size: 30px;
     padding: 14px;
     position: relative;
     top: 20px;
     left: 10px;
+}
+
+td {
+  border-bottom: 1px solid #ddd;
+}
+
+center{
+    font-size: 20pt;
+}
+
+div.row{
+    border: 1px solid lightgrey;
+}
+
+ul{
+    font-size: 12pt;
 }
 
 .button{
@@ -30,7 +53,7 @@ input[type=number]{
     box-shadow: 2px 2px #888888;
     position: relative;
     left: 160px;
-    top: -55px;
+    top: -65px;
 }
 
 input[type=submit]:hover {
@@ -50,7 +73,6 @@ input[type=submit]:hover {
 .results{
     font-size: 25px;
     color: blue;
-    
 }
 
 .mysteryButton{
