--- a/p4/public/css/style.css
+++ b/p4/public/css/style.css
@@ -7,11 +7,34 @@ body{
 }
 
 #logo {
-    width:90%;    
+    width: 50%;
+    border: 1px solid grey;
 }
 
 h2, h3{
     color: blue;
+}
+
+fieldset{
+    border: 1px solid black;
+    padding: 10px;
+    width: 480px;
+    margin: 10px;
+}
+
+#historyLink:link, #historyLink:visited{
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+#historyLink:hover, #historyLink:active {
+  background-color: green;
+  color: white;
 }
 
 input[type=number]{
@@ -20,12 +43,8 @@ input[type=number]{
     font-size: 30px;
     padding: 14px;
     position: relative;
-    top: 20px;
+    top: 30px;
     left: 10px;
-}
-
-td {
-  border-bottom: 1px solid #ddd;
 }
 
 center{
@@ -52,8 +71,8 @@ ul{
     font-size: 20px;
     box-shadow: 2px 2px #888888;
     position: relative;
-    left: 160px;
-    top: -65px;
+    left: 200px;
+    top: -35px;
 }
 
 input[type=submit]:hover {
@@ -86,9 +105,6 @@ input[type=submit]:hover {
     cursor: pointer;
     font-size: 20px;
     box-shadow: 2px 2px #888888;
-    position: relative;
-    left: 350px;
-    top: -330px;
 }
 
 .mysteryButton:hover {
@@ -98,9 +114,6 @@ input[type=submit]:hover {
 #revealNumber{
     font-size: 35px;
     font-weight: bold;
-    position: relative;
-    left: 380px;
-    top: -378px;
 }
 
 .fadeIn{
@@ -118,5 +131,119 @@ input[type=submit]:hover {
     
     100%{
         opacity: 1;
+    }
+}
+
+collapsible {
+  background-color: lightgrey;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: grey;
+}
+
+.content {
+  padding: 0 18px;
+  display: block;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+
+/*****************************************************
+********* Media Breakpoints **************************
+*****************************************************/
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    #logo {
+        width:80%;
+    }
+    
+    .button{
+        width: 90px;
+        font-size: 18px;
+        position: relative;
+        /left: 165px;
+    }
+    
+    table{
+        transform: scale(0.70);
+    }
+    
+    fieldset{
+        transform: scale(0.90);
+
+    }
+}
+
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 500px) {
+    #logo {
+        width:80%;
+    }
+    
+    
+    .button{
+        width: 90px;
+        font-size: 18px;
+        position: relative;
+        /left: 250px;
+        /top: 5px;
+    }
+    
+    table, fieldset{
+        transform: scale(0.80);
+        margin: -15px;
+        margin-left: 20px;
+    }
+    
+    fieldset{
+        padding: -5px;
+        margin-left: -55px;
+    }
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    #logo {
+        width:70%;
+    }
+     .button{
+        width: 90px;
+        font-size: 18px;
+        position: relative;
+        /left: 50px;
+        /top: -35px;
+    }
+    
+    table{
+        transform: scale(0.80);
+    }
+    
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    #logo {
+        width:60%;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    #logo {
+        width:50%;
     }
 }
