--- a/p4/public/css/style.css
+++ b/p4/public/css/style.css
@@ -15,14 +15,7 @@ h2, h3{
     color: blue;
 }
 
-fieldset{
-    border: 1px solid black;
-    padding: 10px;
-    width: 480px;
-    margin: 10px;
-}
-
-#historyLink:link, #historyLink:visited{
+.historyLink:link, .historyLink:visited{
   background-color: white;
   color: black;
   border: 2px solid green;
@@ -32,7 +25,7 @@ fieldset{
   display: inline-block;
 }
 
-#historyLink:hover, #historyLink:active {
+.historyLink:hover, .historyLink:active {
   background-color: green;
   color: white;
 }
@@ -44,7 +37,7 @@ input[type=number]{
     padding: 14px;
     position: relative;
     top: 30px;
-    left: 10px;
+    left: -50px;
 }
 
 center{
@@ -71,8 +64,8 @@ ul{
     font-size: 20px;
     box-shadow: 2px 2px #888888;
     position: relative;
-    left: 200px;
-    top: -35px;
+    left: 100px;
+    top: -55px;
 }
 
 input[type=submit]:hover {
@@ -172,17 +165,12 @@ collapsible {
         width: 90px;
         font-size: 18px;
         position: relative;
-        /left: 165px;
     }
     
     table{
         transform: scale(0.70);
     }
     
-    fieldset{
-        transform: scale(0.90);
-
-    }
 }
 
 
@@ -202,16 +190,12 @@ collapsible {
         /top: 5px;
     }
     
-    table, fieldset{
+    table{
         transform: scale(0.80);
         margin: -15px;
         margin-left: 20px;
     }
     
-    fieldset{
-        padding: -5px;
-        margin-left: -55px;
-    }
 }
 
 
